--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.4.0",
     "iconify-icon": "^1.0.8",
     "wordlist-english": "^1.2.1"
   }
